Fix content overflow issue, implement wrapper rather than row

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,16 @@ section h1 {
    padding-top: 5rem;
    text-align: center;
 }
-/* Media Queries */
+
+ Media Queries 
+@media screen and (max-width: 578px) {
+    h1.hero-title{
+        font-size: 25px;
+    }
+    h2.hero-subtitle{
+        font-size: 17px;
+    }
+}
 
 @media screen and (min-width:860px) {
     .navbar{
@@ -318,14 +327,8 @@ section h1 {
         font-size:2.5rem;
     }
 }
-@media screen and (max-width: 1200px) {
-    .navbar{
-        width:100%;
-        padding:8px 32px;
-        border-radius: 3px;
 
-    }
-}
+*/
 @media screen and (max-width:950px) {
     h1.hero-title{
         margin: 16px 0px 0px;
